# ChangeLog for media-plugins/qmmp-plugin-pack
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/qmmp-plugin-pack/ChangeLog,v 1.20 2014/05/28 17:49:13 hwoarang Exp $

*qmmp-plugin-pack-0.7.7 (28 May 2014)

  28 May 2014; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.7.ebuild:
  Version bump

*qmmp-plugin-pack-0.7.6 (18 Apr 2014)

  18 Apr 2014; Lars Wendler <polynomial-c@gentoo.org>
  +qmmp-plugin-pack-0.7.6.ebuild:
  Version bump.

*qmmp-plugin-pack-0.7.5 (17 Mar 2014)

  17 Mar 2014; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.5.ebuild:
  Version bump

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  qmmp-plugin-pack-0.7.3.ebuild:
  x86 stable wrt bug #492908

*qmmp-plugin-pack-0.7.4 (02 Jan 2014)

  02 Jan 2014; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.4.ebuild:
  Version bump

  08 Dec 2013; Markos Chandras <hwoarang@gentoo.org>
  qmmp-plugin-pack-0.7.3.ebuild:
  Stable on amd64 wrt bug #492908

  30 Nov 2013; Markos Chandras <hwoarang@gentoo.org>
  -qmmp-plugin-pack-0.7.1.ebuild, -qmmp-plugin-pack-0.7.2.ebuild:
  Remove old

*qmmp-plugin-pack-0.7.3 (03 Oct 2013)

  03 Oct 2013; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.3.ebuild:
  Version bump. Bug #486850

*qmmp-plugin-pack-0.7.2 (29 Aug 2013)

  29 Aug 2013; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.2.ebuild, -qmmp-plugin-pack-0.6.5.ebuild,
  -qmmp-plugin-pack-0.7.0.ebuild:
  Version bump. Remove old. Bug #482837

*qmmp-plugin-pack-0.7.1 (30 Jun 2013)

  30 Jun 2013; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.1.ebuild:
  Version bump. Bug #475162

*qmmp-plugin-pack-0.7.0 (20 Apr 2013)

  20 Apr 2013; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.7.0.ebuild:
  Version bump

*qmmp-plugin-pack-0.6.6 (25 Mar 2013)

  25 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  +qmmp-plugin-pack-0.6.6.ebuild: